Change background color of body, background color of user page buttons, font-size in navbar, position of popup form is fixed now, removed unecessary wrapped div on user page and if user isn't found in match, it returns nil

--- a/app/assets/stylesheets/_homes.scss
+++ b/app/assets/stylesheets/_homes.scss
@@ -71,6 +71,7 @@ html {
 
 * {
     font-family: 'Roboto', sans-serif;
+    
     color: white;
 }
 input {
@@ -80,7 +81,9 @@ input {
 body {
     margin: 0 auto;
     overflow-x: hidden;
+    background: #222222;
     background: #141414;
+    background: #181818;
 }
 ::-webkit-scrollbar {
     height: 12px;
@@ -187,7 +190,8 @@ body {
         box-shadow: 0px 1px 5px 1px black;
         text-decoration: none;
         border-radius: 5px;
-        background: #42044B;
+        //background: #42044B;
+        background: #4c0357;
         padding: 10px 28px 10px 28px;
         margin-right: 10px;
         &:last-child {
