--- a/app/assets/stylesheets/_navbar.scss
+++ b/app/assets/stylesheets/_navbar.scss
@@ -47,6 +47,7 @@
             border-radius: 15px;
         }
         a {
+            font-size: 20px;
             width: 100%;
             text-decoration: none;
             transition: color 0.2s ease-in-out;
