--- a/app/assets/stylesheets/_popup-form.scss
+++ b/app/assets/stylesheets/_popup-form.scss
@@ -5,7 +5,7 @@
    width: 100%;
    height: 100%;
    background: rgba(0, 0, 0, 0.8);
-   position: absolute;
+   position: fixed;
    //z-index: 9998;
    top: 0;
 
