--- a/app/assets/stylesheets/_tourney-card-advanced.scss
+++ b/app/assets/stylesheets/_tourney-card-advanced.scss
@@ -25,15 +25,7 @@
     }
     &__text {
         font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-        font-size: 1.2em;
+        font-size: 1.1em;
         color: white;
     }
-}
-.tourney-card-advanced.fullScreen {
-    z-index: 9999;
-    width: 100% !important; 
-    height: 100% !important;
-    top: 0 !important;
-    left: 0 !important;
-
 }
