--- a/app/assets/stylesheets/_user-page.scss
+++ b/app/assets/stylesheets/_user-page.scss
@@ -8,6 +8,9 @@
     //filter: drop-shadow(-5px, -5px 3px, black);
     &__info {
         background: #202020;
+        display: flex;
+        justify-content: space-between;
+        box-shadow: 0px 0px 10px 5px black;
     }
     &__tourney-cards {
         display: flex;
@@ -16,9 +19,6 @@
 }
 .user-data {
     
-    display: flex;
-    justify-content: space-between;
-    box-shadow: 0px 0px 10px 5px black;
 
     &__avatar {
         display: flex;
@@ -26,6 +26,7 @@
     }
 
     &__username {
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
         font-size: 28px;
         display: flex;
         margin-left: 1em;
@@ -36,7 +37,7 @@
         align-items: end;
         margin-right: 3em;
         margin-bottom: 1em;
-        
+        text-align: center;
     }
     &__lel {
         display: flex;
